<resources>
    <string name="app_name">AndroidMD</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="linearhorizontal">linearHorizontal</string>
    <string name="linearvertical">linearVertical</string>
    <string name="gridhorizontal">gridHorizontal</string>
    <string name="gridvertical">gridVertical</string>
    <string name="staggeredhorizontal">staggeredHorizontal</string>
    <string name="staggeredvertical">staggeredVertical</string>
    <string name="weapon_inc">枪械简介</string>
    <string name="people_inc">人物简介</string>
    <string name="sub_inc">配件简介</string>
    <string name="thing_inc">空投简介</string>
    <string name="bottomsheetdialog">BottomSheetDialog</string>
    <string name="snackbar_toast">SnackBar+Toast</string>
    <string name="alert_dialog">AlertDialog</string>
    <string name="other_title">攻略</string>
    <string name="inc_title">简介</string>
</resources>
